# OpenContext

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  package-lock.json  package.json  update-oc.sh
.claude/skills/: cargo-clean.md
.github/: release.yml
.github/workflows/: ci.yml  cli-publish.yml  cli-smoke.yml  desktop-build.yml  native-build.yml
crates/opencontext-core/: Cargo.toml
crates/opencontext-core/src/: events.rs  lib.rs  migrations.rs  tests.rs  wal.rs
crates/opencontext-core/src/migrations/: 001_initial.sql  002_stable_id.sql  003_wal.sql
crates/opencontext-core/src/search/: bm25_store.rs  config.rs  embedding.rs  error.rs  index_sync.rs  indexer.rs  mod.rs  searcher.rs  types.rs  vector_store.rs
crates/opencontext-node/: index.d.ts  index.js  package-lock.json  package.json
crates/opencontext-node/src/: lib.rs
docs/: CODEBASE_MAP.md
scripts/: check-env.sh  pre-commit  setup-hooks.sh  sync-native.sh
src-ios/: App.js  README.md  app.json  config.js  index.js  package-lock.json  package.json  theme.js
src-ios/components/: Card.js  EmptyState.js  FadeInView.js  FloatingButton.js  Screen.js
src-ios/db/: docs.js  index.js  migrations.js  schema.js
src-ios/i18n/: index.js
src-ios/i18n/locales/: en.json  zh.json
src-ios/ios/: Podfile
src-ios/ios/OpenContext/: Info.plist
src-ios/ios/OpenContext.xcodeproj/: project.pbxproj
src-ios/ios/OpenContext.xcworkspace/: contents.xcworkspacedata
src-ios/screens/: DocEditorScreen.js  DocsScreen.js  IdeasScreen.js  SettingsScreen.js
src-ios/services/: ai.js  ideas.js  images.js
src-ios/utils/: date.js  ideaTime.js  paths.js  uuid.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_rpc.rs  chat.rs  main.rs  terminal_session.rs  utils.rs
src-tauri/src/commands/: agent.rs  ai.rs  context.rs  mod.rs  search.rs  terminal.rs
src/core/: agents.js  config.js  data-service.js  native.js  store-native.js
src/mcp/: server.js
src/ui/: .gitignore  jsconfig.json  mobile.html  server.js  tailwind.config.cjs  vite.config.js
src/ui/src/: App.jsx  (+3 more)
tests/native/: index-improvements.test.js  store-native.test.js
(+58 files in other folders)
