[package]
name = "opencontext"
version = "1.0.0"
description = "OpenContext Desktop App"
authors = ["OpenContext"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
opencontext-core = { path = "../crates/opencontext-core", features = ["search"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

