[package]
name = "opencontext-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
search = [
    "dep:lancedb",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:reqwest",
    "dep:pulldown-cmark",
    "dep:toml",
    "dep:tokio",
    "dep:futures",
    "dep:uuid",
    "dep:log",
    "dep:regex",
    "dep:urlencoding",
]

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
dirs = "5"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Search feature dependencies
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"], optional = true }
futures = { version = "0.3", optional = true }
lancedb = { version = "0.17", optional = true }
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
pulldown-cmark = { version = "0.12", optional = true }
toml = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
log = { version = "0.4", optional = true }
regex = { version = "1", optional = true }
urlencoding = { version = "2.1", optional = true }

[dev-dependencies]
tempfile = "3"
